syntax = "proto3";
package nodes;

option go_package = "github.com/snple/kokomi/pb/nodes;nodes";

import "proxy_message.proto";
import "generic_message.proto";

message ProxyListRequest {
    pb.Page page = 1;
    string device_id = 2;
    string tags = 3;
    string type = 4;
}

message ProxyListResponse {
    pb.Page page = 1;
    uint32 count = 2;
    repeated pb.Proxy proxy = 3;
}

message ProxyLinkRequest {
    string id = 1;
    sint32 status = 2;
}

message ProxyPullRequest {
    int64 after = 1;
    uint32 limit = 2;
    string device_id = 3;
    string type = 4;
}

message ProxyPullResponse {
    int64 after = 1;
    uint32 limit = 2;
    repeated pb.Proxy proxy = 3;
}

service ProxyService {
    rpc View(pb.Id) returns (pb.Proxy) {}
    rpc Name(pb.Name) returns (pb.Proxy) {}
    rpc List(ProxyListRequest) returns (ProxyListResponse) {}
    rpc Link(ProxyLinkRequest) returns (pb.MyBool) {}
    rpc ViewWithDeleted(pb.Id) returns (pb.Proxy) {}
    rpc Pull(ProxyPullRequest) returns (ProxyPullResponse) {}
}
